# lfc-dev

./: .gitignore  .impeccable.md  CONTRIBUTING.md  README.md  SECURITY.md  artifact-sync-rewrite-plan.md  package.json  plan.md  pnpm-lock.yaml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  deploy.yml  publish-cli.yml  release-tray.yml
apps/api/: package.json  tsconfig.json  wrangler.toml
apps/api/migrations/: 0001_schema.sql  0002_waitlist.sql
apps/api/src/: audit.ts  auth.ts  data.ts  db.ts  env.ts  index.ts  manifests.ts  utils.ts
apps/api/src/routes/: artifacts.ts  audit.ts  auth.ts  configs.ts  devices.ts  invites.ts  orgs.ts  profile-artifacts.ts  profiles.ts  secrets.ts  setup.ts  snapshots.ts  status.ts  submissions.ts  suggestions.ts  sync.ts  users.ts  waitlist.ts
apps/cli/: package.json  tsconfig.json
apps/cli/src/: index.ts
apps/dashboard/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/dashboard/public/: llms.txt
apps/dashboard/src/: App.tsx  index.css
apps/dashboard/src/components/: AuthShell.tsx  EmptyState.tsx  Layout.tsx  LegalShell.tsx  PageHeader.tsx  StatusBadge.tsx  ToolToggleButton.tsx
apps/dashboard/src/lib/: api.ts  (+2 more)
apps/tray/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/tray/src/: App.tsx  config.ts  index.css
apps/tray/src-tauri/: Cargo.toml  tauri.conf.json
apps/tray/src-tauri/capabilities/: desktop.json
apps/tray/src-tauri/icons/: icon.icns
apps/tray/src-tauri/src/: artifact_sync.rs  commands.rs  main.rs  state.rs  sync.rs
(+34 files in other folders)
